--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~2.1.1",
     "angular": "~1.2.26",
     "bootstrap": "~3.1.1",
+    "angular-highlightjs":"0.4.1",
     "angular-sanitize": "~1.2.26",
     "angular-mocks": "~1.2.26"
   }
