WIP - images gulped into dust

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,9 +1,10 @@
 {
+  "devel": true,
   "bitwise": true,
   "immed": true,
   "newcap": true,
   "noarg": true,
-  "noempty": true,
+  "noempty": false,
   "nonew": true,
   "trailing": true,
   "maxlen": 200,
