--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "angular",
     "directive"
   ],
-  "author": {
-    "name": "Mohsen Azimi"
-  },
-  "license": "MIT",
   "devDependencies": {
     "del": "^0.1.3",
     "event-stream": "^3.1.7",
@@ -27,6 +23,7 @@
     "gulp-concat": "^2.4.1",
     "gulp-connect": "^2.0.6",
     "gulp-header": "^1.1.1",
+    "gulp-inject": "^3.0.0",
     "gulp-jshint": "^1.8.5",
     "gulp-karma": "0.0.4",
     "gulp-less": "^1.3.6",
