--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "angular-bootstrap": "~0.13.0",
     "angular-highlightjs":"0.4.1",
     "angular-sanitize": "~1.2.26",
-    "angular-mocks": "~1.2.26",
+    "angular-mocks": "^1.3.0",
     "angular-ui-router":"~0.2.10",
     "bootstrap": "~3.1.1"
   }
