--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
+    "karma-jasmine": "~0.3.0",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
     "mversion": "^1.6.0"
   },
   "directories": {}
